--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@
   display: flex;
   flex-flow: column wrap;
   flex-grow: 1;
-  padding: 0%;
   background: #4e71ec;
-  justify-content: space-between;
-  align-content: center;
+  height: 100vh;
+  width: 100vw;
+
+  /* justify-content: space-between;
+  align-content: center; */
 }
 
 .Header {
@@ -51,8 +53,9 @@
 }
 
 .Subheader {
-  width: 150px;
+  width: 40px;
   flex-grow: 1;
+  flex-shrink: 2;
   text-align: center;
   font-family: "Aladin";
   font-style: normal;
@@ -71,7 +74,7 @@
 }
 
 .grid {
-  display: flexbox;
+  display: flex;
   align-items: center;
   justify-content: center;
   padding: 0% 20%;
@@ -79,7 +82,7 @@
 
 .GameGrid {
   display: flex;
-  flex-shrink: 1;
+  justify-content: space-evenly;
   background-color: black;
   position: relative;
   min-height: 250px;
@@ -91,17 +94,30 @@
 }
 .grid-view div {
   display: flex;
+  align-items: center;
+  background-color: #4e71ec;
+  min-width: 90px;
+  min-height: 90px;
+}
+
+.grid-view div div {
+  display: flex;
+  align-self: center;
   border: 0.5px solid rgb(0, 0, 0);
   background-color: #4e71ec;
-  width: auto;
-  height: auto;
-  min-width: 50;
-  min-height: 50;
+  min-width: 90px;
+  min-height: 90px;
 }
 
 .grid-view {
   grid-column: 1 / span all;
   grid-row: 1 / span all;
+}
+
+.GridIcon {
+  display: flex;
+  min-width: 90px;
+  min-height: 90px;
 }
 
 .Button1 {
@@ -171,9 +187,8 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
-  gap: 30px;
+  gap: 3px;
   list-style-type: none;
-  min-width: 300px;
   min-height: 71px;
   width: auto;
   height: auto;
@@ -188,10 +203,8 @@
 .PlayerIcon {
   display: flex;
   flex-grow: 1;
-  width: fit-content;
-  height: fit-content;
-  min-width: 48px;
-  min-height: 48px;
+  width: 60px;
+  height: 60px;
   left: 2px;
   top: 510px;
   margin: 5% 5%;
@@ -214,4 +227,12 @@
   letter-spacing: -0.32px;
 
   color: #ffffff;
+}
+
+Button {
+  background-color: ;
+}
+
+.Button3 {
+  margin-left: 5px;
 }
